<resources>
    <string name="app_name">Project One</string>
    <string name="txt_SinIn">Login</string>
    <string name="txt_hello">Hello</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_OK">OK</string>
    <string name="txt_signinwith">Sign in with another account</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_homepage">Home Page</string>
    <string name="txt_Notifications">Notifications</string>
    <string name="txt_Cuisine">Cuisine</string>
    <string name="txt_entertainment">Entertainment</string>
    <string name="txt_Shopping">Shopping</string>
    <string name="txt_Travel">Travel</string>
    <string name="txt_Education">Education</string>
    <string name="txt_Other">Other</string>
    <string name="txt_Realestatearound">Real estate around</string>
    <string name="txt_Vietnamesebrand">Vietnamese brand</string>
    <string name="txt_all">All</string>
    <string name="txt_skip">Skip</string>
    <string name="txt_back">Back</string>
    <string name="txt_start">Start</string>
    <string name="txt_next">Next</string>
    <string name="txt_login">Sign In</string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_sarena">SARENA</string>
    <string name="txt_all_conversation">ALL CONVERSATION</string>
    <string name="txt_groups">GROUPS</string>
    <string name="txt_albums">ALBUMS</string>
    <string name="txt_poll">POLL</string>
    <string name="txt_senate">SENATE</string>
    <string name="txt_personal">PERSONAL</string>
    <string name="txt_open_issues">OPEN ISSUES</string>
    <string name="txt_resolved_issues">RESOLVED ISSUES</string>
    <string name="txt_sagora">SAGORA</string>
    <string name="txt_services">SERVICES</string>
    <string name="txt_freelancers">FREELANCERS</string>
    <string name="txt_classifieds">CLASSIFIEDS</string>
    <string name="txt_Senior_resident">Senior resident</string>
    <string name="txt_Minister">Minister</string>
    <string name="txt_Replies">Replies</string>
    <string name="txt_like">Like</string>
    <string name="txt_Votes">Votes</string>
    <string name="txt_notices">Notices</string>
    <string name="txt_DiscoverGroups">Discover Groups</string>
    <string name="txt_Members">Members</string>
    <string name="txt_ComplaintNumber">Complaint Number</string>
    <string name="txt_Reply">Reply</string>
    <string name="txt_ServicesforawellrunApartment">Services for a well-run Apartment</string>
    <string name="txt_sell">SELL</string>
    <string name="txt_rent">RENT</string>
    <string name="txt_wanted">WANTED</string>
    <string name="txt_other">OTHER</string>
    <string name="txt_Rs">Rs.</string>
    <string name="txt_username">Username</string>
    <string name="txt_Changepassworduser">Change the password</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_birthday">Birthday</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_emailUser">Email</string>
    <string name="txt_IDnumber">ID Number</string>
    <string name="txt_address">Address</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_finish">Finish</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_firstname">First Name</string>
    <string name="txt_lastname">Last Name</string>
    <string name="txt_Fullname">Fullname</string>
    <string name="txt_DateRange">Date Range</string>
    <string name="txt_Issuedby">Issued by</string>
    <string name="txt_house">House number, street</string>
    <string name="txt_Wards">Wards</string>
    <string name="txt_District">District</string>
    <string name="txt_city">City, province</string>
    <string name="txt_selfchange">Self-change password</string>
    <string name="txt_chooserandompassword">Choose random password</string>
    <string name="txt_old">Old password</string>
    <string name="txt_newPassword">New password</string>
    <string name="txt_Enternewpassword">Enter a new password</string>
    <string name="txt_myQR">My QR code</string>
    <string name="txt_share">Share</string>
    <string name="txt_savecode">Save Code</string>

    <string name="key_google_api">AIzaSyCqk6yLpY4YgJNxMOAIk4Jc-41uO6Sa6pQ</string>
    <!--search-->
    <string name="show_list">Show list</string>
    <string name="name_result">Shri Natraj Indian Cuisine</string>
    <string name="review_result">209</string>
    <string name="country_result">Indian Restaurant</string>
    <string name="address_result">41 Bùi Thị Xuân, Phường Phạm Ngũ Lão, Quận 1, TP.Hồ Chí Minh</string>
    <string name="time_result">Open at 11:00 AM</string>
    <string name="direction">Directions</string>
    <string name="title_suggest">Mini Loft Design à Proximité du Marais</string>
    <string name="price">đ2,895,961 per night</string>
    <string name="from">From: </string>
    <string name="to">To: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estimate_value">GIá trị nhà đất(tỷ VNĐ)</string>
    <string name="borrow_value">Tỉ lệ vay (%)</string>
    <string name="duration_borrow">Thời hạn vay (năm)</string>
    <string name="year">năm</string>
    <string name="billion">tỷ</string>
    <string name="inter_rest_rate">Lãi xuất %/năm</string>
    <string name="txt_radio_1">Thanh toán theo dư nợ giảm dần</string>
    <string name="txt_radio_2">Thanh toán đều hàng tháng</string>

    <!--//spinner-->
    <string-array name="spinner">
        <item>Mặc định</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_activity_calculator_borrow">CalculatorBorrow</string>
    <string name="facebook_app_id">352185958922539</string>
    <string name="fb_login_protocol_scheme">fb352185958922539</string>
    <string name="txt_Thewaytodoit">The way to do it</string>
    <string name="txt_Camera">Camera</string>
    <string name="txt_Getphotosfromthelibrary">Get photos from the library</string>
    <string name="txt_redeempoints">Redeem Points</string>
    <string name="txt_GOLD">GOLD</string>
    <string name="txt_Introduce">Introduce</string>
    <string name="txt_Pointscanbeused">Points can be used</string>
    <string name="txt_expirydate">expiry date</string>
    <string name="txt_Historicalpoint">Historical point</string>
    <string name="txt_Howtoaccumulatebonuspoints">How to accumulate bonus points</string>
    <string name="txt_Latestoffers">Latest offers</string>
    <string name="txt_Member">Member</string>
    <string name="txt_standard">Standard</string>
    <string name="txt_Silver">Silver</string>
    <string name="txt_vip">VIP</string>
    <string name="txt_accumulation">Accumulation</string>
    <string name="txt_previouspoint">previous point</string>
    <string name="txt_toopenthestandard">to open the standard</string>
    <string name="txt_point">point</string>
    <string name="txt_Level">Level</string>
    <string name="txt_Rewardhistory">Reward history</string>
    <string name="txt_Pointsreceived">Points received</string>
    <string name="txt_Pointsused">Points used</string>
    <string name="txt_Giftstore">Gift store</string>
</resources>
