<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="@dimen/dimens_padding"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Member"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        />
    <TextView
        android:layout_marginTop="@dimen/dimens_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Introduce"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_medium"
        android:fontFamily="@font/roboto_regular"
        />
    <TextView
        android:layout_marginTop="@dimen/dimens_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Level"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_medium"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        />
    <SeekBar
        android:layout_marginTop="@dimen/dimens_padding"
        android:id="@+id/votes_senior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="50"
        android:progressDrawable="@drawable/custom_seekbar"
        android:secondaryProgress="0"
        android:thumb="@null"
        android:thumbOffset="@null" />
    <TextView
        android:layout_marginTop="@dimen/dimens_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_tichluydiem_member"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textsize_medium"
        android:fontFamily="@font/roboto_regular"
        />
</LinearLayout>