<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.User.QR.QRUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_heigth_toobar"
        android:layout_alignParentTop="true"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/img_back_ToobarQRuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <TextView
            android:id="@+id/txt_title_ToobarSagora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/img_back_ToobarQRuser"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_regular"
            android:lines="1"
            android:text="@string/txt_myQR"
            android:textColor="@color/color_WhiteTextView"
            android:textSize="@dimen/textTitToobar" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_QR_user"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
               android:layout_marginRight="5dp"
                android:id="@+id/btn_share_QRuser"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_heigth_btnAdd"
                android:layout_below="@+id/check_save_password"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/colorBlue"
                android:text="@string/txt_share"
                android:textAllCaps="false"
                android:textColor="@color/color_WhiteTextView"
                android:textSize="@dimen/textsize_medium" />

            <Button
                android:layout_marginLeft="5dp"
                android:id="@+id/btn_save_QRuser"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_heigth_btnAdd"
                android:layout_below="@+id/check_save_password"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/colorBlue"
                android:text="@string/txt_savecode"
                android:textAllCaps="false"
                android:textColor="@color/color_WhiteTextView"
                android:textSize="@dimen/textsize_medium" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>