<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:weightSum="4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_IDnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:scrollbars="vertical"
            android:textColorHint="@color/colorBlue"
            app:errorTextAppearance="@style/HintTextError"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_user_IDnumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textlines"
                android:backgroundTint="@color/colorPrimaryDark"
                android:cursorVisible="true"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/txt_IDnumber"
                android:imeOptions="actionDone"
                android:inputType="number|numberDecimal"
                android:paddingTop="@dimen/padding_edt_form_signIn"
                android:paddingBottom="@dimen/padding_edt_form_signIn"
                android:scrollbars="vertical"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlue"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="@dimen/textMedium" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_ngaycap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:focusable="false"
            android:scrollbars="vertical"
            android:textColorHint="@color/colorBlue"
            app:errorTextAppearance="@style/HintTextError"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_user_ngaycap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textlines"
                android:backgroundTint="@color/colorPrimaryDark"
                android:cursorVisible="true"
                android:focusable="false"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/txt_DateRange"
                android:inputType="text"
                android:paddingTop="@dimen/padding_edt_form_signIn"
                android:paddingBottom="@dimen/padding_edt_form_signIn"
                android:scrollbars="vertical"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlue"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="@dimen/textMedium" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/txt_Issuedby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_small"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/txt_Issuedby"
            android:textColor="@color/colorBlue"
            />
        <Spinner
            android:layout_marginTop="7dp"
            android:layout_below="@+id/txt_Issuedby"
            android:id="@+id/pioedittxt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/spinner_style"
            android:dropDownVerticalOffset="-53dp"
            android:spinnerMode="dropdown"
            android:drawSelectorOnTop="true"
            />
        <TextView
            android:layout_below="@+id/pioedittxt5"
            android:background="@drawable/textlines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_cancel_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_finish_user"
            android:background="@android:color/transparent"
            android:text="@string/txt_cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/textsize_medium" />

        <Button
            android:id="@+id/btn_finish_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:text="@string/txt_finish"
            android:textAllCaps="false"
            android:textColor="#0077bb"
            android:textSize="@dimen/textsize_medium" />

    </RelativeLayout>
</LinearLayout>